# LrUtility

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  mypy.ini  pyproject.toml
example/: run_delete_rate_1.py
src/: delete_rate_1.py  utils.py  xmp_parser.py
src/lrutility/: XMPParser.py  delete_rate_1.py  utils.py  zip_chunker.py
src/lrutility/cli/: cli.py  delete_rate_1.py  zip_chunker.py
src/lrutility/xmp/: XMPDataclass.py  XMPParser.py
tests/: test_xmp_parser.py
tests/assets/: not_rating.xmp  rating_1.xmp
