[project]
name = "lrutility"
version = "0.0.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "chatflip", email = "oo.chat.flip@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
]

[dependency-groups]
test = [
    "pytest",
    "pytest-cov",
] 

lint = [
    "ruff==0.14.4", 
    "ty>=0.0.1a25",
]

[project.scripts]
delete_rate_1 = "lrutility.cli.delete_rate_1:delete_rate_1"
zip_chunker = "lrutility.cli.zip_chunker:zip_chunker"

[tool.uv]
default-groups = []

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
